force-app/main/default/objects/KYC_Status__c/KYC_Status__c.object-meta.xml
<CustomObject>
    <description>KYC Status Object Updated in 2015 (EN-0670) as part of the Data Project and KYC Workstream Updates</description>
    <label>KYC Status</label>
    <nameField>
        <displayFormat>KYC-{000000}</displayFormat>
        <label>KYC Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KYC Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>