force-app/main/default/objects/KYC_Status__c/fields/Business_Comments__c.field-meta.xml
<CustomField>
    <fullName>Business_Comments__c</fullName>
    <description>Comments from Business</description>
    <inlineHelpText>Comments / Notes from Business</inlineHelpText>
    <label>Business Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>