force-app/main/default/objects/KYC_Status__c/fields/CC_Contacted_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Contacted_Date__c</fullName>
    <description>Date the CC have been contacted</description>
    <inlineHelpText>Date the CC have been contacted</inlineHelpText>
    <label>CC Contacted Date</label>
    <type>Date</type>
</CustomField>