force-app/main/default/objects/KYC_Status__c/fields/CCBM_on_Client_CST__c.field-meta.xml
<CustomField>
    <fullName>CCBM_on_Client_CST__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCBM on Client CST</label>
    <referenceTo>User</referenceTo>
    <relationshipName>KYC_Status1</relationshipName>
    <type>Lookup</type>
</CustomField>