force-app/main/default/objects/KYC_Status__c/fields/Client_Commitment_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Commitment_Date__c</fullName>
    <description>The date the client agreed to send required documentation</description>
    <inlineHelpText>The date the client agreed to send required documentation</inlineHelpText>
    <label>Client Commitment Date</label>
    <type>Date</type>
</CustomField>