force-app/main/default/objects/KYC_Status__c/fields/Client_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_Date__c</fullName>
    <description>Date the Client have been contacted</description>
    <inlineHelpText>Date the Client have been contacted</inlineHelpText>
    <label>Client Contact Date</label>
    <type>Date</type>
</CustomField>