force-app/main/default/objects/KYC_Status__c/fields/Client_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Client_Coordinator__c</fullName>
    <description>This field displays the Client Coordinator for the related Client</description>
    <formula>Client__r.Account_Owner__c</formula>
    <inlineHelpText>Client Coordinator for the Related Client</inlineHelpText>
    <label>Client Coordinator</label>
    <type>Text</type>
</CustomField>