force-app/main/default/objects/KYC_Status__c/fields/Client_Group_Parent_CIF__c.field-meta.xml
<CustomField>
    <fullName>Client_Group_Parent_CIF__c</fullName>
    <formula>Client__r.Group_Parent_CIF_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Group Parent CIF</label>
    <type>Text</type>
</CustomField>