force-app/main/default/objects/KYC_Status__c/fields/Client_Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_Parent_ID__c</fullName>
    <description>Hidden field to capture Parent ID of client - EN - 824</description>
    <formula>Client__r.ParentId</formula>
    <label>Client Parent ID</label>
    <type>Text</type>
</CustomField>