force-app/main/default/objects/KYC_Status__c/fields/Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Type__c</fullName>
    <description>This field used to reside on the KYC Request object.</description>
    <label>Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Central Bank</fullName>
            </value>
            <value>
                <fullName>Financial Institution</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Investment Advisor</fullName>
            </value>
            <value>
                <fullName>Managed Fund</fullName>
            </value>
            <value>
                <fullName>Non-Financial Business</fullName>
            </value>
            <value>
                <fullName>Trusts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>