force-app/main/default/objects/KYC_Status__c/fields/Client_Type_Category__c.field-meta.xml
<CustomField>
    <fullName>Client_Type_Category__c</fullName>
    <description>This field used to reside on the KYC Request object.</description>
    <label>Client Type Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Government Partnership</fullName>
            </value>
            <value>
                <fullName>Limited Partnership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>