force-app/main/default/objects/KYC_Status__c/fields/Closure_Suspended_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closure_Suspended_Reason__c</fullName>
    <description>Closure / Suspended Reason</description>
    <inlineHelpText>Closure / Suspended Reason</inlineHelpText>
    <label>Closure/Suspended Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Documents Provided</fullName>
            </value>
            <value>
                <fullName>Record created in error</fullName>
            </value>
            <value>
                <fullName>Exited</fullName>
            </value>
            <value>
                <fullName>Duplicate record</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Inactive/Dormant</fullName>
            </value>
            <value>
                <fullName>Parent Closed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>De-Registered</fullName>
            </value>
            <value>
                <fullName>Closed on Take-on</fullName>
            </value>
            <value>
                <fullName>Relationship moved to retail</fullName>
            </value>
            <value>
                <fullName>Liquidated</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Merger &amp; Acquisition</fullName>
            </value>
            <value>
                <fullName>Amend Owner Form</fullName>
            </value>
            <value>
                <fullName>Sanctioned Entity</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>KYC Outstanding</fullName>
            </value>
            <value>
                <fullName>Propagated</fullName>
            </value>
            <value>
                <fullName>Awaiting Closure</fullName>
            </value>
            <value>
                <fullName>Dispensation Expired</fullName>
            </value>
            <value>
                <fullName>BS&amp;R</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>