force-app/main/default/objects/KYC_Status__c/fields/Consultant_Comments__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Comments__c</fullName>
    <description>This field used to reside on the KYC Request object.</description>
    <inlineHelpText>KYC Consultant Comments</inlineHelpText>
    <label>Consultant Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>