force-app/main/default/objects/KYC_Status__c/fields/Date_CC_Followed_Up_with_Client__c.field-meta.xml
<CustomField>
    <fullName>Date_CC_Followed_Up_with_Client__c</fullName>
    <description>Date the Client Coordinator contacted the client after escalation to the Client Coordinator by the KYC team</description>
    <inlineHelpText>Date the Client Coordinator contacted the client after escalation to the Client Coordinator by the KYC team</inlineHelpText>
    <label>Date CC Followed Up with Client</label>
    <type>Date</type>
</CustomField>