force-app/main/default/objects/KYC_Status__c/fields/Entity_Code__c.field-meta.xml
<CustomField>
    <fullName>Entity_Code__c</fullName>
    <label>Entity Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ARG</fullName>
            </value>
            <value>
                <fullName>BSI</fullName>
            </value>
            <value>
                <fullName>LIB</fullName>
            </value>
            <value>
                <fullName>SALL</fullName>
            </value>
            <value>
                <fullName>SBA</fullName>
            </value>
            <value>
                <fullName>SBAO</fullName>
            </value>
            <value>
                <fullName>SBAU</fullName>
            </value>
            <value>
                <fullName>SBBW</fullName>
            </value>
            <value>
                <fullName>SBCD</fullName>
            </value>
            <value>
                <fullName>SBCI</fullName>
            </value>
            <value>
                <fullName>SBGH</fullName>
            </value>
            <value>
                <fullName>SBGS</fullName>
            </value>
            <value>
                <fullName>SBKE</fullName>
            </value>
            <value>
                <fullName>SBLS</fullName>
            </value>
            <value>
                <fullName>SBMU</fullName>
            </value>
            <value>
                <fullName>SBMW</fullName>
            </value>
            <value>
                <fullName>SBMZ</fullName>
            </value>
            <value>
                <fullName>SBN</fullName>
            </value>
            <value>
                <fullName>SBNA</fullName>
            </value>
            <value>
                <fullName>SBSA</fullName>
                <default>true</default>
                <label>SBSA</label>
            </value>
            <value>
                <fullName>SBSZ</fullName>
            </value>
            <value>
                <fullName>SBT</fullName>
            </value>
            <value>
                <fullName>SBTZ</fullName>
            </value>
            <value>
                <fullName>SBU</fullName>
            </value>
            <value>
                <fullName>SBUG</fullName>
            </value>
            <value>
                <fullName>SBZM</fullName>
            </value>
            <value>
                <fullName>SBZW</fullName>
            </value>
            <value>
                <fullName>SFL</fullName>
            </value>
            <value>
                <fullName>SMBA</fullName>
            </value>
            <value>
                <fullName>SSAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>