force-app/main/default/objects/KYC_Status__c/fields/Escalated_to_Business__c.field-meta.xml
<CustomField>
    <fullName>Escalated_to_Business__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business user to whom the KYC review have been escalated to</description>
    <inlineHelpText>Business user to whom the KYC review have been escalated to</inlineHelpText>
    <label>Escalated to Business</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Escalated_KYCs</relationshipName>
    <type>Lookup</type>
</CustomField>