force-app/main/default/objects/KYC_Status__c/fields/Escalation_Date__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Date__c</fullName>
    <description>Date that the KYC was escalated to business</description>
    <inlineHelpText>Date that the KYC was escalated to business</inlineHelpText>
    <label>Escalation Date</label>
    <type>Date</type>
</CustomField>