force-app/main/default/objects/KYC_Status__c/fields/Follow_up_with_Client_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_with_Client_Coordinator__c</fullName>
    <description>Follow up with Client Coordinator after Escalation</description>
    <inlineHelpText>Follow up with Client Coordinator after Escalation</inlineHelpText>
    <label>Follow up with Client Coordinator</label>
    <type>Date</type>
</CustomField>