force-app/main/default/objects/KYC_Status__c/fields/GT_ID__c.field-meta.xml
<CustomField>
    <fullName>GT_ID__c</fullName>
    <description>Displays the Goldtier ID Number</description>
    <inlineHelpText>Goldtier Refrence Number</inlineHelpText>
    <label>GT ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>