force-app/main/default/objects/KYC_Status__c/fields/GT_Risk__c.field-meta.xml
<CustomField>
    <fullName>GT_Risk__c</fullName>
    <description>Indicates the Client Risk level (higher risk would need more frequent KYC&apos;s to be completed)</description>
    <inlineHelpText>Client Risk level (higher risk would need more frequent KYC&apos;s to be completed)</inlineHelpText>
    <label>Risk</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>