force-app/main/default/objects/KYC_Status__c/fields/Gt_Secondary_Status__c.field-meta.xml
<CustomField>
    <fullName>Gt_Secondary_Status__c</fullName>
    <description>This field indicates the Goldtier KYC Secondary Status for this Client</description>
    <inlineHelpText>Goldtier KYC Secondary Status for the Client</inlineHelpText>
    <label>Gt Secondary Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Approved on Import</fullName>
            </value>
            <value>
                <fullName>Approved Pending CIF Authorization</fullName>
            </value>
            <value>
                <fullName>Closed on Take-on</fullName>
            </value>
            <value>
                <fullName>Exited</fullName>
            </value>
            <value>
                <fullName>Inactive /Dormant</fullName>
            </value>
            <value>
                <fullName>KYC Outstanding</fullName>
            </value>
            <value>
                <fullName>Merger &amp; Acquisition</fullName>
            </value>
            <value>
                <fullName>No Documents Provided</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Relationship Moved to Retail</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>