force-app/main/default/objects/KYC_Status__c/fields/KYC_Consultant__c.field-meta.xml
<CustomField>
    <fullName>KYC_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>KYC Analyst</description>
    <inlineHelpText>KYC Analyst</inlineHelpText>
    <label>KYC Consultant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>KYC_Status</relationshipName>
    <type>Lookup</type>
</CustomField>