force-app/main/default/objects/KYC_Status__c/fields/KYC_Document_Status__c.field-meta.xml
<CustomField>
    <fullName>KYC_Document_Status__c</fullName>
    <description>US-1205: KYC - Document Status to reflect on the KYC Review</description>
    <formula>IF( AND(
         OR(
             No_of_KYC_Docs_with_Status_Outstanding__c == 0,No_of_KYC_Docs_with_Status_Outstanding__c &gt; 0),No_of_KYC_Docs_with_Status_Received__c == 0) ,
          &apos;No Documents received&apos;, 
           IF( No_of_KYC_Docs_with_Status_Outstanding__c == 0 &amp;&amp;
               No_of_KYC_Docs_with_Status_Received__c &gt;0,
                    &apos;All Documents Received&apos;,
                    &apos;Partial Documents Received&apos;)
                      )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>An indication of the overall status of KYC documents attached. If at least one document is marked as “outstanding” this status will be “Partial Documents Received”.</inlineHelpText>
    <label>KYC Document Status</label>
    <type>Text</type>
</CustomField>