force-app/main/default/objects/KYC_Status__c/fields/KYC_Escalated_date_after_7_days__c.field-meta.xml
<CustomField>
    <fullName>KYC_Escalated_date_after_7_days__c</fullName>
    <formula>Client_Contact_Date__c + 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KYC Escalated date after 30 days</label>
    <type>Date</type>
</CustomField>