force-app/main/default/objects/KYC_Status__c/fields/KYC_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>KYC_Review_Status__c</fullName>
    <description>KYC Review Status</description>
    <inlineHelpText>KYC Review Status</inlineHelpText>
    <label>KYC Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Awaiting Compliance/Legal Guidance</fullName>
            </value>
            <value>
                <fullName>Client Risk Committee Approval Outstanding</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Compliant</fullName>
            </value>
            <value>
                <fullName>Deferred Entities</fullName>
            </value>
            <value>
                <fullName>Entities Still to Contact</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>KYC Processing Documents</fullName>
            </value>
            <value>
                <fullName>KYC Reviewer Approval Outstanding</fullName>
            </value>
            <value>
                <fullName>Migrated Entity to Contact</fullName>
            </value>
            <value>
                <fullName>Migrated to PBB</fullName>
            </value>
            <value>
                <fullName>Migration in Progress</fullName>
            </value>
            <value>
                <fullName>Potential Closure</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>