force-app/main/default/objects/KYC_Status__c/fields/KYC_Status__c.field-meta.xml
<CustomField>
    <fullName>KYC_Status__c</fullName>
    <formula>CASE( Status__c ,&quot;Y&quot;,&quot;Complete&quot;,&quot;N&quot;,&quot;Not Complete&quot;,&quot;S&quot;,&quot;Suspended&quot;,&quot;E&quot;,&quot;Exited&quot;,&quot;R&quot;,&quot;Requested&quot;,&quot;N/A&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KYC Status</label>
    <type>Text</type>
</CustomField>