force-app/main/default/objects/KYC_Status__c/fields/Next_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Review_Date__c</fullName>
    <description>Estimated Date for the next review</description>
    <inlineHelpText>Estimated Date for the next review</inlineHelpText>
    <label>Next Review Date</label>
    <type>Date</type>
</CustomField>