force-app/main/default/objects/KYC_Status__c/fields/No_of_KYC_Docs_with_Status_Received__c.field-meta.xml
<CustomField>
    <fullName>No_of_KYC_Docs_with_Status_Received__c</fullName>
    <description>US-1205: KYC - Document Status to reflect on the KYC Review</description>
    <inlineHelpText>Field identifies no. of Required KYC docs with status as Received or Introductory Certificate</inlineHelpText>
    <label>No. of KYC Docs with Status-Received</label>
    <summaryFilterItems>
        <field>KYC_Required_Documents__c.Status__c</field>
        <operation>equals</operation>
        <value>Received, Introductory Certificate</value>
    </summaryFilterItems>
    <summaryForeignKey>KYC_Required_Documents__c.KYC_Review_Status__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>