force-app/main/default/objects/KYC_Status__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <description>This field used to reside on the KYC Request object.</description>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FX</fullName>
            </value>
            <value>
                <fullName>FX - Collaterized</fullName>
            </value>
            <value>
                <fullName>FX - Not collaterized</fullName>
            </value>
            <value>
                <fullName>FX - Spot</fullName>
            </value>
            <value>
                <fullName>FX - Forward</fullName>
            </value>
            <value>
                <fullName>FX - Leverage</fullName>
            </value>
            <value>
                <fullName>FX - Dual Currency</fullName>
            </value>
            <value>
                <fullName>FX - Currency Options</fullName>
            </value>
            <value>
                <fullName>Money Market</fullName>
            </value>
            <value>
                <fullName>Money Market - Non Deliverable Forward</fullName>
            </value>
            <value>
                <fullName>Money Market - Other</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Credit - Credit Linked Notes</fullName>
            </value>
            <value>
                <fullName>Credit - Other</fullName>
            </value>
            <value>
                <fullName>Equities</fullName>
            </value>
            <value>
                <fullName>Equities - Securities</fullName>
            </value>
            <value>
                <fullName>Equities - Equity Indices</fullName>
            </value>
            <value>
                <fullName>Equities - Equity Linked Notes</fullName>
            </value>
            <value>
                <fullName>Equities - Other</fullName>
            </value>
            <value>
                <fullName>Derivatives</fullName>
            </value>
            <value>
                <fullName>Derivatives - Interest Rates</fullName>
            </value>
            <value>
                <fullName>Derivatives - Equities</fullName>
            </value>
            <value>
                <fullName>Derivatives - Credit</fullName>
            </value>
            <value>
                <fullName>Derivatives - Options</fullName>
            </value>
            <value>
                <fullName>Derivatives - Currency</fullName>
            </value>
            <value>
                <fullName>Interest Rates</fullName>
            </value>
            <value>
                <fullName>Interest Rates - Futures</fullName>
            </value>
            <value>
                <fullName>Interest Rates - Options</fullName>
            </value>
            <value>
                <fullName>Interest Rates - Other</fullName>
            </value>
            <value>
                <fullName>Structured Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>