force-app/main/default/objects/KYC_Status__c/fields/Provisional_Suspension_Date__c.field-meta.xml
<CustomField>
    <fullName>Provisional_Suspension_Date__c</fullName>
    <description>The provisional suspension date, set 90 days after the first contact with the client</description>
    <formula>Client_Contact_Date__c + 90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The provisional suspension date, set 90 days after the first contact with the client</inlineHelpText>
    <label>Provisional Suspension Date</label>
    <type>Date</type>
</CustomField>