force-app/main/default/objects/KYC_Status__c/fields/Relationship_Role__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Role__c</fullName>
    <description>US-1440 - As a Salesforce Integration user I want to be able to receive the Role of the KYC Location in CIF and store it in the Role within KYC Status in Salesforce so that I can store the information sent from CIF.</description>
    <inlineHelpText>Roles received from the CIF feed</inlineHelpText>
    <label>Relationship Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Clearing House</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Club Participant/Syndicate Loan</fullName>
            </value>
            <value>
                <fullName>Corresponding Bank</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>Fund</fullName>
            </value>
            <value>
                <fullName>Guaranteeing Bank</fullName>
            </value>
            <value>
                <fullName>Issuer</fullName>
            </value>
            <value>
                <fullName>Managed Fund</fullName>
            </value>
            <value>
                <fullName>Nostro Agent</fullName>
            </value>
            <value>
                <fullName>Potential Client</fullName>
            </value>
            <value>
                <fullName>Processing Organisation</fullName>
            </value>
            <value>
                <fullName>Professional Service Provider</fullName>
            </value>
            <value>
                <fullName>Reference Asset</fullName>
            </value>
            <value>
                <fullName>Settlement Bank</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>