force-app/main/default/objects/KYC_Status__c/fields/Review_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Completed_Date__c</fullName>
    <description>Date of review completion</description>
    <inlineHelpText>Date of review completion</inlineHelpText>
    <label>Review Completed Date</label>
    <type>Date</type>
</CustomField>