force-app/main/default/objects/KYC_Status__c/fields/Review_Year_Period__c.field-meta.xml
<CustomField>
    <fullName>Review_Year_Period__c</fullName>
    <description>This field displays the KYC Review Year</description>
    <inlineHelpText>Displays the KYC Review Year/Period. Must be in yyyy format.</inlineHelpText>
    <label>Review Year / Period</label>
    <length>20</length>
    <type>Text</type>
</CustomField>