force-app/main/default/objects/KYC_Status__c/fields/Reviewer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Comments__c</fullName>
    <description>Reviewer Comments</description>
    <inlineHelpText>Reviewer Comments</inlineHelpText>
    <label>Reviewer Comments</label>
    <type>TextArea</type>
</CustomField>