force-app/main/default/objects/KYC_Status__c/fields/Reviewer_Name__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reviewer for the Analyst</description>
    <inlineHelpText>Reviewer for the Analyst</inlineHelpText>
    <label>Reviewer Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reviewers</relationshipName>
    <type>Lookup</type>
</CustomField>