force-app/main/default/objects/KYC_Status__c/fields/SGC_Deferment_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>SGC_Deferment_Expiry_Date__c</fullName>
    <description>Date the extension for suspension expires</description>
    <inlineHelpText>Date the extension for suspension expires</inlineHelpText>
    <label>SGC Deferment Expiry Date</label>
    <type>Date</type>
</CustomField>