force-app/main/default/objects/KYC_Status__c/fields/To_delete__c.field-meta.xml
<CustomField>
    <fullName>To_delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Helper field for EN-736 Onboarding: Integration back from CIF into SF</description>
    <label>To delete</label>
    <type>Checkbox</type>
</CustomField>